--- a/idp/idp.vcproj
+++ b/idp/idp.vcproj
@@ -43,7 +43,7 @@
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;IDP_EXPORTS;_CRT_SECURE_NO_DEPRECATE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
-				RuntimeLibrary="3"
+				RuntimeLibrary="1"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
@@ -62,6 +62,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="wininet.lib"
 				LinkIncremental="2"
+				ModuleDefinitionFile="idp.def"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				TargetMachine="1"
@@ -117,7 +118,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;IDP_EXPORTS;_CRT_SECURE_NO_DEPRECATE"
-				RuntimeLibrary="2"
+				RuntimeLibrary="0"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
@@ -136,6 +137,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="wininet.lib"
 				LinkIncremental="1"
+				ModuleDefinitionFile="idp.def"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				OptimizeReferences="2"
@@ -181,6 +183,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\idp.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\idp.def"
+				>
+			</File>
+			<File
 				RelativePath=".\netfile.cpp"
 				>
 			</File>
@@ -199,7 +209,15 @@
 				>
 			</File>
 			<File
+				RelativePath=".\idp.h"
+				>
+			</File>
+			<File
 				RelativePath=".\netfile.h"
+				>
+			</File>
+			<File
+				RelativePath=".\resource.h"
 				>
 			</File>
 			<File
@@ -216,6 +234,10 @@
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav"
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
+			<File
+				RelativePath=".\idp.rc"
+				>
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
