--- a/dlltest/dlltest.vcproj
+++ b/dlltest/dlltest.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="8,00"
-	Name="statictest"
-	ProjectGUID="{ADCDC02E-60F2-4CD4-A2B0-653E394990ED}"
-	RootNamespace="statictest"
+	Name="dlltest"
+	ProjectGUID="{8100EAEB-D5E9-4CB5-80BD-6D3DF18BADDE}"
+	RootNamespace="dlltest"
 	Keyword="Win32Proj"
 	>
 	<Platforms>
@@ -40,7 +40,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_DEPRECATE"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -60,8 +60,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="wininet.lib"
+				AdditionalDependencies="idp.lib"
 				LinkIncremental="2"
+				AdditionalLibraryDirectories="..\debug"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				TargetMachine="1"
@@ -116,7 +117,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_DEPRECATE"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
@@ -134,8 +135,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="wininet.lib"
+				AdditionalDependencies="idp.lib"
 				LinkIncremental="1"
+				AdditionalLibraryDirectories="..\release"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				OptimizeReferences="2"
@@ -177,23 +179,7 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath="..\idp\downloader.cpp"
-				>
-			</File>
-			<File
 				RelativePath=".\main.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\idp\netfile.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\idp\trace.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\idp\url.cpp"
 				>
 			</File>
 		</Filter>
