--- a/tests/dlltest/dlltest.vcproj
+++ b/tests/dlltest/dlltest.vcproj
@@ -62,7 +62,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="idp.lib"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="..\debug"
+				AdditionalLibraryDirectories="..\..\debug"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				TargetMachine="1"
@@ -137,7 +137,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="idp.lib"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="..\release"
+				AdditionalLibraryDirectories="..\..\release"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				OptimizeReferences="2"
