toansi() function moved to tstring.cpp

--- a/idp/idp.vcproj
+++ b/idp/idp.vcproj
@@ -353,6 +353,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\tstring.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\ui.cpp"
 				>
 			</File>
