--- a/tests/statictest/statictest.vcproj
+++ b/tests/statictest/statictest.vcproj
@@ -341,6 +341,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\idp\securityoptions.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\idp\timer.cpp"
 				>
 			</File>
