formatsize() & formatspeed() functions (to be implemented). Speed now calculated by division on seconds (not miliseconds). Messages still need to be updated. Version info changed to 1.1.2.

--- a/tests/statictest/statictest.vcproj
+++ b/tests/statictest/statictest.vcproj
@@ -337,15 +337,15 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\idp\internetoptions.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\main.cpp"
 				>
 			</File>
 			<File
 				RelativePath="..\..\idp\netfile.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\idp\securityoptions.cpp"
 				>
 			</File>
 			<File
