Misc. non-functional changes: UI class renamed to Ui, ***UI methods renamed to ***Ui TRACE macro now adds 'IDP: ' prefix & line break. Indentation in examples changed to 4 spaces, other style improvements. gdi32 library in Code::Blocks project file. IDPFormRec/IDPOptionsRec renamed to TIdpForm/TIdpOptions. Version history updated.

--- a/idp/idp.cbp
+++ b/idp/idp.cbp
@@ -63,6 +63,7 @@
 			<Add option="-static-libgcc" />
 			<Add option="idp.def" />
 			<Add library="wininet" />
+			<Add library="gdi32" />
 		</Linker>
 		<Unit filename="downloader.cpp" />
 		<Unit filename="downloader.h" />
