Fix: SIGSEGV with _tcslwr; tstrlower() function. dlltest added to Code::Block workspace. More ErrorDialog code (still not working). Minor changes in idp.cpp.

--- a/tests/statictest/statictest.vcproj
+++ b/tests/statictest/statictest.vcproj
@@ -333,6 +333,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\idp\errordialog.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\idp\file.cpp"
 				>
 			</File>
