--- a/idp/idp.cbp
+++ b/idp/idp.cbp
@@ -44,6 +44,9 @@
 					<Add option="-g" />
 					<Add option="-D_DEBUG" />
 				</Compiler>
+				<ExtraCommands>
+					<Add after='cmd /c copy &quot;..\ansi debug\idp.dll&quot; &quot;..\tests\dlltest\bin\Debug&quot;' />
+				</ExtraCommands>
 			</Target>
 			<Target title="Release ANSI">
 				<Option output="../ansi/idp" prefix_auto="1" extension_auto="1" />
@@ -57,6 +60,9 @@
 				<Linker>
 					<Add option="-s" />
 				</Linker>
+				<ExtraCommands>
+					<Add after='cmd /c copy &quot;..\ansi\idp.dll&quot; &quot;..\tests\dlltest\bin\Release&quot;' />
+				</ExtraCommands>
 			</Target>
 		</Build>
 		<Linker>
