ErrorDialog fixes & localization.

--- a/idp/idp.rc
+++ b/idp/idp.rc
@@ -105,16 +105,17 @@ END
 //
 
 IDD_ERRORDIALOG DIALOGEX 0, 0, 280, 154
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "Dialog"
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Setup"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "Retry",IDRETRY,168,132,50,14
     PUSHBUTTON      "Ignore",IDIGNORE,114,132,50,14
-    CONTROL         "",IDC_STATIC,"Static",SS_BLACKFRAME | SS_REALSIZEIMAGE,6,6,30,30
-    LISTBOX         IDC_FILELIST,42,18,228,102,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON      "Abort",IDABORT,222,132,50,14
-    LTEXT           "Static",IDC_STATIC,42,6,19,8
+    ICON            "",IDC_ERRICON,6,6,20,20,SS_REALSIZEIMAGE
+    LISTBOX         IDC_FILELIST,36,30,234,96,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    PUSHBUTTON      "Cancel",IDABORT,222,132,50,14
+    LTEXT           "Download failed: Error description",IDC_ERRTEXT,36,6,234,8
+    LTEXT           "The following files was not downloaded:",IDC_FILESND,36,18,234,8
 END
 
 
