--- a/tests/dlltest/dlltest.cbp
+++ b/tests/dlltest/dlltest.cbp
@@ -6,7 +6,7 @@
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
-			<Target title="Debug">
+			<Target title="Debug ANSI">
 				<Option output="bin/Debug/dlltest" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
@@ -18,7 +18,7 @@
 					<Add library="..\..\ansi debug\libidp.a" />
 				</Linker>
 			</Target>
-			<Target title="Release">
+			<Target title="Release ANSI">
 				<Option output="bin/Release/dlltest" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
