mingw-w64: __USE_MINGW_ANSI_STDIO compile option to avoid libstdc++-6.dll, libwinpthread-1.dll and _vswprintf@msvcrt.dll dependencies.

--- a/idp/idp.cbp
+++ b/idp/idp.cbp
@@ -65,6 +65,9 @@
 				</ExtraCommands>
 			</Target>
 		</Build>
+		<Compiler>
+			<Add option="-D__USE_MINGW_ANSI_STDIO" />
+		</Compiler>
 		<Linker>
 			<Add option="-static-libgcc" />
 			<Add option="idp.def" />
