mingw-w64: -static-libstdc++ & -static linker options.

--- a/idp/idp.cbp
+++ b/idp/idp.cbp
@@ -70,6 +70,8 @@
 		</Compiler>
 		<Linker>
 			<Add option="-static-libgcc" />
+			<Add option="-static-libstdc++" />
+			<Add option="-static" />
 			<Add option="idp.def" />
 			<Add library="wininet" />
 			<Add library="gdi32" />
