--- a/idp/idp.cbp
+++ b/idp/idp.cbp
@@ -65,6 +65,9 @@
 				</ExtraCommands>
 			</Target>
 		</Build>
+		<VirtualTargets>
+			<Add alias="All configurations" targets="Debug;Release;Debug ANSI;Release ANSI;" />
+		</VirtualTargets>
 		<Compiler>
 			<Add option="-D__USE_MINGW_ANSI_STDIO" />
 		</Compiler>
